[+] Image rotation code added for

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">PermissionDemo</string>
     <string name="label_open_gallery">Open gallery!</string>
     <string name="label_open_camera">Open camera!</string>
+    <string name="label_roate_image">Rotate image</string>
 </resources>
